[package]
name = "wstp"
version = "0.1.0"
authors = ["Connor Gray <accounts@connorgray.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wstp-sys = { path = "./wstp-sys" }

wl-expr = { package = "wl-expr-core", git = "ssh://git@stash.wolfram.com:7999/~connorg/wl-expr-core.git" }

lazy_static = "1.4.0"
ref-cast = "1.0.6"

[dev-dependencies]
rand = "0.8.3"
