[package]
name = "wstp"
version = "0.1.0"
authors = ["Connor Gray <code@connorgray.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wstp-sys = { path = "./wstp-sys" }

wolfram-expr = { git = "https://github.com/WolframResearch/wolfram-expr-rs" }

lazy_static = "1.4.0"
ref-cast = "1.0.6"

[dev-dependencies]
rand = "0.8.3"
