[package]
name = "wstp"
version = "0.2.3"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Connor Gray <code@connorgray.com>"]
readme = "README.md"
repository = "https://github.com/WolframResearch/wstp-rs"
description = "Bindings to the Wolfram Symbolic Transfer Protocol (WSTP)"
keywords = ["wstp", "mathlink", "wolfram", "wolfram-language", "wolfram-engine"]
categories = ["external-ffi-bindings", "development-tools::ffi", "encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wstp-sys = { version = "0.2.3", path = "./wstp-sys" }

wolfram-expr = "0.1.0"

once_cell = "1.9.0"
ref-cast = "1.0.6"

[dev-dependencies]
rand = "0.8.3"
wolfram-app-discovery = "0.3.0"
