[package]
name = "wstp-sys"
version = "0.1.0"
authors = ["Connor Gray <code@connorgray.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# TODO(!): Audit this. Is this the correct name? Will it always be correct? What is the
#          significance of the "i4" suffix -- is that a version number?
links = "WSTPi4"

[dependencies]

[build-dependencies]
wolfram-app-discovery = { git = "https://github.com/WolframResearch/wolfram-app-discovery-rs" }

cfg-if = "0.1.10"
